--- a/consumer/docker-compose.yml
+++ b/consumer/docker-compose.yml
@@ -12,18 +12,15 @@ services:
     ports:
       - "${EXTERNAL_PORT}:8001"
     depends_on:
-      # - rabbitmq
       - mongo
       - mongo-express
     networks:
-      # - host
       - producer_host
   consumer:
     image: ${APP_NAME}
     build: .
-    command: python ./app/receive.py
+    command: python -u ./receive.py
     networks:
-      # - host
       - producer_host
   mongo:
     image: mongo
@@ -32,23 +29,18 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
     networks:
-    # - host
       - producer_host
   mongo-express:
     image: mongo-express
     restart: always
     ports:
-      - 8081:8081
+      - ${MONGO_PORT}:${MONGO_PORT}
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${PASSWORD}
+      ME_CONFIG_MONGODB_URL: ${MONGO_DB}
     networks:
-        # - host
         - producer_host
-  # extra_hosts:
-  #     - "host.docker.internal:host-gateway"
 networks:
   producer_host:
     external: true
-  # host:
